--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -25,5 +25,8 @@
         <button type="button" class="btn btn-secondary" onclick="location.href='/members/new'">회원가입</button>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
+    <a href="/oauth2/authorization/google">구글 아이디로 로그인</a>
+    <a href="/oauth2/authorization/naver">네이버 아이디로 로그인</a>
+    <a href="/oauth2/authorization/kakao">카카오 아이디로 로그인</a>
 </div>
 </html>
